--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         </section>
         <section class="login">
             <form action="">
-                <div class="inputs-box">
+                <div class="input-box">
                     <label for="email">E-mail</label>
                     <input type="email" placeholder="Digite seu e-mail" id="email">
                 </div>
                 <div class="input-box">
-                    <label for="senha">Senha</label>
-                    <a href="">Esqueceu sua senha?</a>
+                    <div>
+                        <label for="senha">Senha</label>
+                        <a href="">Esqueceu sua senha?</a>
+                    </div>
                     <input type="password" placeholder="Digite sua senha" id="senha">
                 </div>
                 <button>Entrar</button>
