--- a/index.html
+++ b/index.html
@@ -12,36 +12,39 @@
 </head>
 
 <body>
-    <header>
-        <img src="./imagens/logo.png" alt="Logo">
-    </header>
+    <div class="conteudo">
 
-    <main>
-        <section class="desc">
-            <h1>Acesse a plataforma</h1>
+        <header>
+            <img src="./imagens/logo.png" alt="Logo">
+        </header>
 
-            <p>Faça login ou registre-se para começar a construir seus projetos ainda hoje.</p>
-        </section>
-        <section class="login">
-            <form action="">
-                <div class="input-box">
-                    <label for="email">E-mail</label>
-                    <input type="email" placeholder="Digite seu e-mail" id="email">
-                </div>
-                <div class="input-box">
-                    <div>
-                        <label for="senha">Senha</label>
-                        <a href="">Esqueceu sua senha?</a>
+        <main>
+            <section class="desc">
+                <h1>Acesse a plataforma</h1>
+
+                <p>Faça login ou registre-se para começar a construir seus projetos ainda hoje.</p>
+            </section>
+            <section class="login">
+                <form action="">
+                    <div class="input-box">
+                        <label for="email">E-mail</label>
+                        <input type="email" placeholder="Digite seu e-mail" id="email">
                     </div>
-                    <input type="password" placeholder="Digite sua senha" id="senha">
-                </div>
-                <button>Entrar</button>
-            </form>
-            <p>
-                Ainda não tem uma conta? <a href="">Inscreva-se</a>
-            </p>
-        </section>
-    </main>
+                    <div class="input-box">
+                        <div>
+                            <label for="senha">Senha</label>
+                            <a href="">Esqueceu sua senha?</a>
+                        </div>
+                        <input type="password" placeholder="Digite sua senha" id="senha">
+                    </div>
+                    <button>Entrar</button>
+                </form>
+                <p>
+                    Ainda não tem uma conta? <a href="">Inscreva-se</a>
+                </p>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
